# bankly

./: .coverage  .gitignore  README.md  TESTS.md  db.sqlite3  manage.py  pyproject.toml  request.json  start.sh  tests.py
authentication/: TESTS.md  serializers.py  tests.py  urls.py  views.py
banking/: TESTS.md  admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
banking/migrations/: 0001_initial.py  0002_alter_account_balance.py  0003_alter_transaction_transaction_type.py  0004_alter_transaction_options.py  0005_notification_transaction_recipient_notification_and_more.py
bankly/: asgi.py  deploy.py  middleware.py  settings.py  urls.py  wsgi.py
client/: package-lock.json  package.json
client/src/: App.js  index.js
client/src/components/: Header.js  RequiresAuth.js
client/src/pages/: Home.js
client/src/pages/Account/: Account.js  AccountManagement.js
client/src/pages/Login/: Login.js
client/src/pages/Register/: Register.js
client/src/pages/logout/: Logout.js
client/src/utils/: auth.js
load-testing/: load-backend-db.sh  load-backend-stateless.sh  load-frontend-stateless.sh
